--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-json-translator",
-  "version": "0.1.4",
+  "version": "1.0.0",
   "description": "Module used to translate json files into another language using the microsoft translator api.",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "1.4.2",
-    "bufferstreams": "^1.1.0",
     "gulp-util": "3.0.7",
-    "mstranslator": "2.0.2",
-    "string_decoder": "^0.10.31",
-    "through2": "2.0.1"
+    "mstranslator": "2.0.2"
   }
 }
