--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gulp-json-translator",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Module used to translate json files into another language using the microsoft translator api.",
   "main": "index.js",
+  "repository": "https://github.com/Chloro/gulp-json-translator",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
